Update the credits!

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								<li><a href="https://sites.google.com/view/supernova100" class="icon brands fa-dribbble alt"><span class="label">Website</span></a></li>
 							</ul>
 						</section>
-      				  	<p class="copyright">&copy; Design Credits : <a href="Avinash Singh, https://html5up.net">HTML5 UP</a>.</p>
+      				  	<p class="copyright">&copy; Credits : Avinash Singh, <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
