--- a/archive.html
+++ b/archive.html
@@ -32,7 +32,7 @@
 
     <!-- Footer -->
     <footer id="footer">
-      <p class="copyright">&copy; Design Credits : <a href="Avinash Singh, https://html5up.net">HTML5 UP</a>.</p>
+      <p class="copyright">&copy; Credits : Avinash Singh, <a href="https://html5up.net">HTML5 UP</a>.</p>
     </footer>
 
   </div>
