--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 											
 										<p>All e-Poster presenters are invited to give a <strong>flash talk</strong> during their allotted session. This short pitch should highlight the main idea of your e-poster and should be presented using a <strong>single static slide in PDF format (landscape, 16:9)</strong>. Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster online.</p> 
 
-										<p>We kindly ask you to upload both your flash-talk slide and e-Poster as PDF files by <strong>August 11</strong>, at the following link : <span style="background-color: #e4d9d9; font-weight: bold;"><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Supernova 100 - Poster Storage</a></span>. For the filenames, please use the format <strong>'ePoster_Title_Surname.pdf'</strong> and <strong>'FlashTalk_Title_Surname.pdf'</strong>. Posters will be hosted online and will <strong>go live on August 16 22:00 UTC</strong>. If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
+										<p>We kindly ask you to upload both your flash-talk slide and e-Poster as PDF files by <strong>August 11</strong>, at the following link : <span style="background-color: #e4d9d9; font-weight: bold;"><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Supernova 100 - Poster Upload</a></span>. For the filenames, please use the format <strong>'ePoster_Title_Surname.pdf'</strong> and <strong>'FlashTalk_Title_Surname.pdf'</strong>. Posters will be hosted online and will <strong>go live on August 16 22:00 UTC</strong>. If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
 
 										<h3><u>Useful Links:</u></h3>
 										<ul class="actions">
 											<li><a href="https://sites.google.com/view/supernova100" class="button orange">Conference Website</a></li>
 											<li><a href="schedule/100YSC_ConferenceSchedule.pdf" class="button red" target="_blank" rel="noopener noreferrer">Conference Schedule</a></li>
-											<li><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC" class="button gray">Supernova 100 - Poster Storage</a></li>
+											<li><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC" class="button gray">Poster Upload</a></li>
 										  </ul>
 
 										<!-- <ul class="actions" style="display: flex; flex-direction: column; gap: 0.25em; margin: 0; padding: 0;">
