update home page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										<h3><u>Useful Links:</u></h3>
 										<ul class="actions">
 											<li><a href="https://sites.google.com/view/supernova100" class="button orange">Conference Website</a></li>
-											<li><a href="schedule/100YSC.pdf" class="button red" target="_blank" rel="noopener noreferrer">Conference Schedule</a></li>
+											<li><a href="schedule/100YSC_UpdatedSchedule.pdf" class="button red" target="_blank" rel="noopener noreferrer">Conference Schedule</a></li>
 											<li><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC" class="button gray">Poster Upload</a></li>
 										  </ul>
 
